test/files/neg/t1477.check
t1477.scala:13: error: overriding type V in trait C with bounds <: Middle.this.D;
 type V is a volatile type; cannot override a type with non-volatile upper bound
    type V <: (D with U)
         ^
one error found
